# photo

./: .gitignore  Cargo.toml  README.md  RULES
curve_viewer/: app.js  index.html  styles.css
docs/: integration-contract.md
frontend/: README.md  index.html
frontend/src/: app.js  styles.css
notes/: dehaze_saved_variants.rs  positive_clarity_dehaze_reference.rs
playground/: app.js  index.html  styles.css
src/: error.rs  lib.rs  main.rs  tester.rs
src/engine/: image.rs  mod.rs  params.rs
src/io/: raw.rs
src/pipeline/: adjustments.rs  clarity.rs  color.rs  contrast.rs  dehaze.rs  exposure.rs  masking.rs  mod.rs  saturation.rs  tonal_ranges.rs
